# miade-tutorials

./: .gitignore  README.md  pyproject.toml
notebooks/: miade_tutorial.ipynb
notebooks/data/: MedCAT_Export.json  meds_allergies_cdb.csv  problems_cdb.csv
notebooks/models/: config.yaml
