[project]
name = "module-name"
dynamic = ["version"]
dependencies = [
]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
miade = "scripts.script"

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"
